# boilerplate-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  autogen.sh
apps/: main.cpp
include/: fib.h
src/: fib.cpp
test/: fib_test.cpp
